# ChangeLog for net-www/phpwebsite
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/phpwebsite/ChangeLog,v 1.6 2003/11/06 20:33:24 mholzer Exp $

  06 Nov 2003; Martin Holzer <mholzer@gentoo.org>
  phpwebsite-0.9.3_p1-r1.ebuild:
  adding patch. Closes #32844.

*phpwebsite-0.9.3_p1-r1 (02 Nov 2003)

  02 Nov 2003; Martin Holzer <mholzer@gentoo.org>
  phpwebsite-0.9.3_p1-r1.ebuild, files/phpwebsite-0.9.3-1-supplemental.patch:
  using webapps.eclass. Submitted by Don Seiler <don@seiler.us> in #32395.

*phpwebsite-0.9.3 (01 Sep 2003)

  01 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> phpwebsite-0.9.3_p1.ebuild :
  Security update.

  18 Jul 2003; Don Seiler <rizzo@gentoo.org>; phpwebsite-0.9.3.ebuild:
  Changing instructions for pre- and post-install scripts

*phpwebsite-0.9.3 (16 Jul 2003)

  16 Jul 2003; Don Seiler <rizzo@gentoo.org>; phpwebsite-0.9.3.ebuild:
  0.9.3 released

*phpwebsite-0.9.2_p1 (16 Jul 2003)

  16 Jul 2003; Don Seiler <rizzo@gentoo.org>:
  Initial import.  Ebuild submitted by me.