@@ -1,11 +1,12 @@
-MD5 50e84af6a568c32093c16591118e5b40 ChangeLog 1084
-MD5 59381aa8a487218a2e4bd9920b7df931 phpwebsite-0.9.2_p1.ebuild 1675
 MD5 6eda883812c4c03fa69d669f459b316b phpwebsite-0.9.3.ebuild 1700
-MD5 1c22d7ae59ec219b6f3e5f696b43186f phpwebsite-0.9.3_p1.ebuild 1737
 MD5 a478ba4e71e2f269556b5680ca23b996 phpwebsite-0.9.3_p1-r1.ebuild 1996
+MD5 1c22d7ae59ec219b6f3e5f696b43186f phpwebsite-0.9.3_p1.ebuild 1737
+MD5 8621649132dda9fa8aeefb6ddfc96ba9 ChangeLog 1164
+MD5 ecbb5a02001856289bc050635b8d8394 metadata.xml 522
+MD5 59381aa8a487218a2e4bd9920b7df931 phpwebsite-0.9.2_p1.ebuild 1675
+MD5 c9e31613b0f4572e934ee68c1dcc94c5 files/phpwebsite-0.9.3-1-supplemental.patch 6581
+MD5 cfee6010162e807cab7db166192cc4d0 files/digest-phpwebsite-0.9.3_p1-r1 76
 MD5 f0ab7279c69a8f1522e8a4eb3ac7cc18 files/digest-phpwebsite-0.9.2_p1 76
-MD5 48b9aff37ab682ee582b5bc49d0f8af3 files/digest-phpwebsite-0.9.3 74
 MD5 cfee6010162e807cab7db166192cc4d0 files/digest-phpwebsite-0.9.3_p1 76
 MD5 a7257ff9063723778a81865e8ff9aba2 files/update.php-0.9.3_p1 7892
-MD5 cfee6010162e807cab7db166192cc4d0 files/digest-phpwebsite-0.9.3_p1-r1 76
-MD5 c9e31613b0f4572e934ee68c1dcc94c5 files/phpwebsite-0.9.3-1-supplemental.patch 6581
+MD5 48b9aff37ab682ee582b5bc49d0f8af3 files/digest-phpwebsite-0.9.3 74
