@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>web-apps</herd>
+<maintainer>
+  <email>rizzo@gentoo.org</email>
+  <name>Don Seiler</name>
+  <description>web-apps herd member and phpWebSite developer</description>
+</maintainer>
+<longdescription>phpWebSite provides a complete web site content management system. Web-based administration allows for easy maintenance of interactive, community-driven web sites.</longdescription>
+</pkgmetadata>
