@@ -1,6 +1,9 @@
 # ChangeLog for net-www/phpwebsite
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/phpwebsite/ChangeLog,v 1.6 2003/11/06 20:33:24 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/phpwebsite/ChangeLog,v 1.7 2003/11/15 20:11:38 rizzo Exp $
+
+  15 Nov 2003; Don Seiler <rizzo@gentoo.org>; metadata.xml:
+  Added metadata.xml
 
   06 Nov 2003; Martin Holzer <mholzer@gentoo.org>
   phpwebsite-0.9.3_p1-r1.ebuild:
